# iseo

./: .env.example  .gitignore  Dockerfile.api  README.md  pyproject.toml  requirements-api.txt  requirements.txt  streamlit_app.py
.github/workflows/: keep-streamlit-awake.yml
app/: main.py
app/agent/: planner.py  schemas.py
app/api/: evaluation.py  health.py  iseo.py  rag.py
app/core/: audit.py  config.py  db.py  logging.py
app/engine/: orchestrator.py
app/evaluation/: dataset.py  engine.py  metrics.py  schemas.py
app/llm/: groq_client.py
app/rag/: chunking.py  embeddings.py  ingest.py  retrieve.py  schemas.py  store.py
app/safety/: .dockerignore  Dockerfile.api  Dockerfile.ui  classifier.py  mitigation.py  policy.py  requirements-api.txt  schemas.py  scoring.py
data/evaluation/: eval_20260328_154222_726ff2dc.json  eval_20260328_154229_4c949d5e.json
scripts/: smoke_test.ps1
tests/: test_health.py
