[project]
name = "iseo"
version = "0.1.0"
description = "Intrinsic Safety & Ethics Optimizer v2"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-json-logger>=2.0",
  "chromadb>=0.5",
  "sentence-transformers>=3.0",
  "groq>=0.9.0",
  "httpx>=0.27",
  "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
